Revert "Make example that works with 2.11 and not with 2.12"
This reverts commit c765cf42b0ba2d2bcf2548ca11c478253e5ea674.