@@ -10,23 +10,27 @@ import com.google.common.collect.Lists;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 
 public class Main {
 
     public static void main(String[] args) throws JsonProcessingException {
         XmlMapper xmlMapper = XmlMapper.builder()
-                //.configure(FromXmlParser.Feature.EMPTY_ELEMENT_AS_NULL, true)
+                .configure(FromXmlParser.Feature.EMPTY_ELEMENT_AS_NULL, true)
                 //.configure(DeserializationFeature.ACCEPT_SINGLE_VALUE_AS_ARRAY, false)
                 .defaultUseWrapper(false).build();
+        xmlMapper.registerModule(new JacksonTypeDefImportExportModule());
 
-        IMyType myType = new MyType(new OtherType(List.of("cf.cplace.type", "type2")));
+        MyType myType = new MyType(
+                Collections.emptyMap()/*Map.of("key1", "value1", "key2", "value2")*/,
+                null,
+                Lists.newArrayList(new OtherType(Collections.emptyList(), Collections.singletonList("cf.cplace.type"), Collections.singletonList("prop")),
+                        new OtherType(Collections.emptyList(), Collections.emptyList(), Collections.emptyList())));
 
         String stringValue = xmlMapper.writeValueAsString(myType);
         System.out.println(stringValue);
         IMyType outputType = xmlMapper.readValue(stringValue, IMyType.class);
-        Preconditions.checkState(myType.equals(outputType));
+        //Preconditions.checkState(myType.equals(outputType));
 
     }
 
